# sanger_check

./: LICENSE  README.md  pyproject.toml
examples/: sanger_check_demo.ipynb
examples/data/: dna_example.fasta  sanger_example.fasta
sanger_check/: __init__.py  sanger_check.py
