[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sanger_check"
version = "0.0.1"
description = "Utilities for checking Sanger sequencing results"
readme = "README.md"
authors = [
  { name="Azam Hussain", email="azamh@umich.edu" },
]
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
   'biopython',
   'pandas',
   'openpyxl',
   'tqdm',
   'biotite',
]

